<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  *Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  ~
  ~  */
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_container_medium"
    tools:context=".activities.DateSelectActivity">

    <com.team7.pregnancytracker.widgets.PregnancyAppTextView
        android:id="@+id/text_view_enter_date_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.team7.pregnancytracker.widgets.PregnancyAppTextView
        android:id="@+id/text_view_estimated_birth_date_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_container_xlarge"
        android:text="@string/text_baby_estimated_birth_date"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_enter_date_description" />

    <com.team7.pregnancytracker.widgets.PregnancyAppEditText
        android:id="@+id/edit_text_estimated_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_container_xsmall"
        android:background="@drawable/style_bordered_rounded_corner"
        android:focusable="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_estimated_birth_date_title" />

    <com.team7.pregnancytracker.widgets.PregnancyAppTextView
        android:id="@+id/text_view_last_period_date_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_container_large"
        android:text="@string/text_last_period_date"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_estimated_birth_date" />

    <com.team7.pregnancytracker.widgets.PregnancyAppEditText
        android:id="@+id/edit_text_last_period_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_container_xsmall"
        android:background="@drawable/style_bordered_rounded_corner"
        android:focusable="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_last_period_date_title" />

    <com.team7.pregnancytracker.widgets.PregnancyAppButton
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_container_xlarge"
        android:background="@drawable/style_button_rounded_corner"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/text_button_continue"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_last_period_date" />

</androidx.constraintlayout.widget.ConstraintLayout>