<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  *Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  ~
  ~  */
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CropDetailFragment">
    <androidx.cardview.widget.CardView
        android:id="@+id/filtercardview"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardElevation="@dimen/elevation_small">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
            <ImageButton
                android:id="@+id/backbtn"
                android:layout_width="@dimen/size_medium"
                android:layout_height="@dimen/size_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_container_small"
                android:src="@drawable/icon_back"
                android:scaleType="centerInside"
                android:background="@null"        />

            <ImageButton
                android:id="@+id/okbttn"
                android:layout_width="@dimen/size_medium"
                android:layout_height="@dimen/size_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/margin_container_small"
                android:src="@drawable/check"
                android:scaleType="centerInside"
                android:background="@null"

                />
            <com.team7.pregnancytracker.widgets.PregnancyAppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/backbtn"
                app:layout_constraintEnd_toStartOf="@id/okbttn"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/text_image_crop">

            </com.team7.pregnancytracker.widgets.PregnancyAppTextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.65"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp">

        <com.huawei.hms.image.vision.crop.CropLayoutView
            android:id="@+id/cropImageView"
            android:layout_width="393dp"
            android:layout_height="372dp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069"
            app:srcCompat="@drawable/ic_launcher_background"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/colosseum" />
    </RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0px"
    android:layout_weight="0.15">

        <RadioGroup
            android:id="@+id/rb_crop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_circular" />

            <RadioButton
                android:id="@+id/rb_rectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_rectangle" />
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:background="@color/colorPrimary"
        android:layout_weight="0.15">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btn_rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_crop_rotate_24"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/text_rotate" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btn_flip_horizontally"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_flip_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/text_flipH" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btn_flip_vertically"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_flip_24" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/text_flipV" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btn_crop_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_crop_24" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/text_crop" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.05">

    </RelativeLayout>

</LinearLayout>
