<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  *Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  ~
  ~  */
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ImageEditorFragment">
    <androidx.cardview.widget.CardView
        android:id="@+id/filtercardview"
        android:layout_width="match_parent"
        app:cardElevation="@dimen/elevation_large"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:background="@color/colorPrimary">
            <ImageButton
                android:id="@+id/image_button_back"
                android:layout_width="@dimen/size_medium"
                android:layout_height="@dimen/size_medium"
                android:background="@null"
                android:padding="@dimen/padding_container_xxsmall"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.team7.pregnancytracker.widgets.PregnancyAppTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/text_image_memory">

            </com.team7.pregnancytracker.widgets.PregnancyAppTextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding_container_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtercardview">
    <com.team7.pregnancytracker.widgets.PregnancyAppTextView
        android:id="@+id/text_view_memory_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_memory"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/margin_container_xsmall"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_memory_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_container_xsmall"
        android:background="@drawable/style_bordered_rounded_corner"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_memory_title" />


    <ImageView
        android:id="@+id/image_view_photo"
        android:layout_width="375dp"
        android:layout_height="385dp"
        android:layout_marginTop="@dimen/margin_container_xsmall"
        android:src="@drawable/memory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_memory_title" />

    <TextView
        android:id="@+id/text_view_add_memory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_add_memory"
        android:layout_marginTop="@dimen/margin_container_xsmall"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_photo"
   />

    <com.team7.pregnancytracker.widgets.PregnancyAppButton
        android:id="@+id/button_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_container_small"
        android:background="@drawable/style_button_rounded_corner"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/text_button_edit"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>

    <com.team7.pregnancytracker.widgets.PregnancyAppButton
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button_rounded_corner"
        android:text="@string/text_button_save"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>